# Carbon

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/tauri-build/: SKILL.md
.claude/skills/tauri-bump-version/: SKILL.md
.claude/skills/tauri-release/: SKILL.md
.codex/: config.toml
.codex/skills/: commit-and-push  tauri-build  tauri-bump-version  tauri-release
.github/workflows/: release.yml
app/: .env.example  index.html  package.json
app/src/: main.tsx  polyfills.ts  router.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  pdf_export.rs
app/src/components/: AboutCarbonDialog.tsx  ActivityBar.tsx  ContextMenu.tsx  CopyMarkdownIcon.tsx  FileTree.tsx  ImageViewer.tsx  NoteEditor.tsx  NoteLinkSuggestionList.tsx  PdfDeck.tsx  PdfViewer.tsx  PptxDeck.tsx  PptxViewer.tsx  Toast.tsx  UnsupportedFileViewer.tsx  VaultSelector.tsx  VideoViewer.tsx  note-view-header.tsx
app/src/components/note-editor/: MediaPreviewHost.tsx  TableOverlayControls.tsx  build-note-link-suggestions.ts  index.tsx  note-editor-slash-commands.ts  table-controls.ts  use-asset-drop-insert.ts  use-editor-zoom.ts  use-image-drop-upload.ts  use-media-preview.ts  use-note-search.ts  use-table-controls.ts
app/src/components/plaintext-editor/: index.tsx
app/src/components/share/: ShareConfirmDialog.tsx  (+3 more)
app/src/lib/: api.ts  app-config.ts  assetApi.ts  assetImageExtension.ts  debounce.ts  file-kind.ts  imageCompression.ts  link-utils.ts  linkUtils.ts  markdown.ts  noteIndex.ts  noteLinkSuggestion.ts  path-utils.ts  pathUtils.ts  pdf-export.ts  pdf-render-document.test.ts  pdf-render-document.ts  types.ts  updater.ts
app/src/routes/: LoginRoute.tsx  SignUpRoute.tsx  WorkspaceRoute.tsx  login-route.tsx  sign-up-route.tsx  workspace-route.tsx
app/src/types/: pdfjs-worker.d.ts
backend/: .dev.vars.example  package.json  wrangler.toml
backend/db/migrations/: 0000_worried_amazoness.sql  0001_tough_rockslide.sql  0002_quick_giant_man.sql
backend/db/schema/: app.ts  index.ts  share.ts
backend/src/: assets.ts  auth.ts  db.ts  desktop-auth.ts  index.ts  share-render.test.ts  share-render.ts  share-warnings.test.ts  share-warnings.ts  shares.ts  signing.ts
docs/: auth-migration-plan.md  file-operation-stability-plan.md  file-watcher-normalization-design.md  github-sync-plan.md  image-dnd-r2-design.md  local-markdown-pivot-design.md  local-page-link-design.md  refactoring-plan.md  tiptap-markdown-unification-policy.md
frontend/: .dev.vars.example  astro.config.mjs  package.json  wrangler.toml
frontend/db/migrations/: 0002_rename_posts_to_notes.sql  0003_aberrant_reptil.sql  0004_gray_thunderbolt.sql  0005_breezy_excalibur.sql  0006_striped_stone_men.sql
frontend/db/schema/: app.ts
frontend/src/: env.d.ts  middleware.ts
frontend/src/components/: CopyMarkdownButton.tsx  FormField.tsx  MarkdownEditor.tsx  PostCard.tsx  PostForm.tsx  SidebarTree.tsx  SignInForm.tsx  SyncSettings.tsx
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: index.astro  login.astro  me.astro
(+108 files in other folders)
