[package]
name = "carbon"
version = "0.1.2"
description = "Local Markdown management app"
authors = ["template-manager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
